--- a/src/components/twitter-input/TwitterInput.module.scss
+++ b/src/components/twitter-input/TwitterInput.module.scss
@@ -1,3 +1,5 @@
+$danger-color: #e0235e;
+
 .root {
   margin: 0 auto;
   max-width: 600px;
@@ -16,4 +18,8 @@
 .button {
   height: 40px;
   margin-left: 1em;
+}
+
+.overTyped {
+  background-color: $danger-color;
 }
